--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,48 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 }
 
 .margin-2 {
     margin: 2rem;
 }
 
+.padding-2 {
+    padding: 2rem;
+}
+
 div, p {
     margin-top: 1rem;
+}
+
+.section-1 input {
+    text-align: center;
+}
+
+h2 {
+    color: white;
+}
+
+.bg-red {
+    background-color: #B91450;
+}
+
+.bg-white {
+    background-color:whitesmoke;
+    border-radius: 10px;
+}
+
+.section-1 label, button {
+    color: #B91450;
+    padding: 0.3rem;
+
+}
+
+.section-1 input, select {
+    border-color: ;
+    padding: 0.3rem;
+    border-radius: 5px;
+    border: 1px solid #B91450;
+
 }
