--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    font-size: 1.1rem;
 }
 
 main {
@@ -13,20 +14,29 @@ main {
     text-align: center;
 }
 
+.border-x {
+    border-top: 2px solid gray;
+    border-bottom: 2px solid gray;
+}
 
 h2 {
     color: white;
-}
+    font-weight: 600;}
+
+h5 {
+   margin-bottom: 3rem;
+} 
 
 h4 {
-    margin-bottom: 3rem;
-}
+    margin-bottom: 1rem;
+ } 
+ 
 
 .bg-red {
     background-color: #B91450;
 }
 
-.bg-white {
+.bg-whites {
     background-color:whitesmoke;
     border-radius: 10px;
 }
@@ -42,5 +52,11 @@ h4 {
     padding: 0.3rem;
     border-radius: 5px;
     border: 1px solid #B91450;
+}
 
+@media screen and (max-width: 768px) {
+    .border-x {
+        border-top: 0;
+        border-bottom: 2px solid gray;
+    }
 }
