--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,10 @@ h4 {
     border: 1px solid #B91450;
 }
 
+.d-none{
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     .border-x {
         border-top: 0;
