--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@
     font-size: 1.1rem;
 }
 
+/* SEZIONE DATI UTENTE */
+
 main {
     height: 100vh;
 }
@@ -14,10 +16,28 @@ main {
     text-align: center;
 }
 
+
+.section-1 label, button {
+    color: #B91450;
+    padding: 0.4rem;
+
+}
+
+.section-1 input, select {
+    border-color: ;
+    padding: 0.3rem;
+    border-radius: 5px;
+    border: 1px solid #B91450;
+}
+
+/* SEZIONE BIGLIETTO */
+
 .border-x {
     border-top: 2px solid gray;
     border-bottom: 2px solid gray;
 }
+
+/* UTILS */
 
 h2 {
     color: white;
@@ -39,19 +59,6 @@ h4 {
 .bg-whites {
     background-color:whitesmoke;
     border-radius: 10px;
-}
-
-.section-1 label, button {
-    color: #B91450;
-    padding: 0.4rem;
-
-}
-
-.section-1 input, select {
-    border-color: ;
-    padding: 0.3rem;
-    border-radius: 5px;
-    border: 1px solid #B91450;
 }
 
 .d-none{
